software/pcx86/app/microsoft/word/1.15/index.md
---
layout: page
title: Microsoft Word 1.15 (for DOS)
permalink: /software/pcx86/app/microsoft/word/1.15/
redirect_from: /disks/pcx86/apps/microsoft/word/1.15/
preview: images/screenshot.png
machines:
  - id: ibm5160
    type: pcx86
    config: /machines/pcx86/machine/ibm/5160/cga/512kb/machine.xml
    autoMount:
      A:
        name: PC DOS 2.00 (Disk 1)
      B:
        name: MS Word 1.15 (Program)
    autoType: $date\r$time\rB:\rWORD\r
---

{% include machine.html id="ibm5160" %}

### Directory of MS Word 1.15 (Program)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     9216   9-18-84  12:00p
    IBMDOS   COM*    28928   9-18-84  12:00p
    MW       COM*    23328   9-18-84  12:00p
    MW       COD*    46538   9-18-84  12:00p
    MW       DAT*    16274   9-18-84  12:00p
    WORD     COM      2062   9-18-84  12:00p
    MWCOPY1  COM*     7600   9-18-84  12:00p
    MWCOPY   BAT        42   9-18-84  12:00p
    AUTOEXEC BAT        11   9-18-84  12:00p
    MOUSE    SYS      4440   9-18-84  12:00p
    MOUSE    COM      4192   9-18-84  12:00p
    EXAMPLE  DOC      4352   9-18-84  12:00p
    MWCOPY2  BAT       292   9-18-84  12:00p
    MW       PGM     72848   9-18-84  12:00p
    MW       HLP     58750  10-16-84  12:06p
    TTY      PRD       820   9-18-84  12:00p
    PLAIN    PRD       896   9-18-84  12:00p
    DEFAULT  STY       768   9-18-84  12:00p
    MW011294 TMP      1024   1-01-80  12:01a
    MW       INI        54   1-01-80   1:37a
           20 file(s)     282435 bytes
                           63488 bytes free

### Directory of MS Word 1.15 (Utilities)

     Volume in drive A has no label
     Directory of A:\

    README   DOC      2656   9-19-84  12:00p
    CONVPRD  EXE     27562   9-19-84  12:00p
    QUME11   PRD      1562   9-19-84  12:00p
    D630ECS  PRD      1708   9-19-84  12:00p
    PLAIN    PRD       820   9-19-84  12:00p
    TTY      PRD       820   9-19-84  12:00p
    D620     PRD      1698   9-19-84  12:00p
    D630A    PRD      1820   9-19-84  12:00p
    MSPRINT  PRD      1066   9-19-84  12:00p
    EPSONFXQ PRD      2140   9-19-84  12:00p
    EPSONMX  PRD      1000   9-19-84  12:00p
    EPSONMXG PRD      1136   9-19-84  12:00p
    TTYWHEEL PRD      1556   9-19-84  12:00p
    EPSONRX  PRD      1270   9-19-84  12:00p
    GRAFTRAX PRD      1124   9-19-84  12:00p
    D630     PRD      1790   9-19-84  12:00p
    IBMGRAPH PRD      1026   9-19-84  12:00p
    ITOHSTAR PRD      1509   9-19-84  12:00p
    NEC3550  PRD      2002   9-19-84  12:00p
    NEC7710  PRD      1902   9-19-84  12:00p
    OKI2410  PRD      1137   9-19-84  12:00p
    OKI92    PRD      1288   9-19-84  12:00p
    TI850    PRD      1134   9-19-84  12:00p
    TOSH1350 PRD      1175   9-19-84  12:00p
    TTYBS    PRD       932   9-19-84  12:00p
    AUX2     PRD       913   9-19-84  12:00p
    HPLASCR  PRD      1047   9-19-84  12:00p
    RADIX    PRD      1312   9-19-84  12:00p
    DELTA    PRD      1300   9-19-84  12:00p
    MT1X     PRD      1349   9-19-84  12:00p
    MT80     PRD      1136   9-19-84  12:00p
    EPSONFX  PRD      2140   9-19-84  12:00p
    EPSONLQ  PRD      2158   9-19-84  12:00p
    HPLASPS  PRD      2251   9-19-84  12:00p
    TTYFF    PRD       820   9-19-84  12:00p
    BROTHER  PRD      1662   9-19-84  12:00p
    HPTHINK  PRD       908   9-19-84  12:00p
    X2700    PRD      6885   9-19-84  12:00p
    ANDX9625 PRD      1682   9-19-84  12:00p
    ANDX9725 PRD      4596   9-19-84  12:00p
    ANDX6500 PRD      1728   9-19-84  12:00p
    ANDX60LT PRD      3868   9-19-84  12:00p
    ANDX60CS PRD      1002   9-19-84  12:00p
    TI855D   PRD      7360   9-19-84  12:00p
    TI855Q   PRD      7360   9-19-84  12:00p
    CONVERT  EXE     39552   9-19-84  12:00p
    CONVPRD  DOC     22382   9-19-84  12:00p
    1        STY      1664   9-19-84  12:00p
    ARTICLE  STY      1024   9-19-84  12:00p
    DEFAULT  STY       768   9-19-84  12:00p
    DRAFT    STY      1024   9-19-84  12:00p
    MOUSE    LIB      2560   9-19-84  12:00p
    HARDCOPY COM      2701   9-19-84  12:00p
    PRINTER  DEF       521   3-07-84  12:00p
           54 file(s)     185506 bytes
                          150528 bytes free

### Directory of MS Word 1.15 (Learning)

     Volume in drive A is LEARN WORD
     Directory of A:\

    LESSONS  CTX    185036   9-20-84   2:06a
    LESSONS  SCN     43001   9-20-84   2:06a
    LESSONS  SOB     42708   9-20-84   2:06a
    LEARN    COM     22016   9-19-84   4:04p
    LW       COD      1882   9-20-84   4:01p
    LW       PGM     21154   9-20-84   4:02p
    LW       DAT     16928   9-20-84   4:00p
            7 file(s)     332725 bytes
                           27648 bytes free

### Copy-Protection Information

    MFM Sector
    Sector ID:001
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xAB5F (Ok)
    Data CRC:0xE3B6 (Ok)
    Start Sector cell:2608
    Start Sector Data cell:3312
    End Sector cell:7504
    Number of cells:4896

    0000| 43 6F 70 79 72 69 67 68 | Copyrigh
    0008| 74 20 31 39 38 33 20 4D | t 1983 M
    0010| 69 63 72 6F 73 6F 66 74 | icrosoft
    0018| 20 43 6F 72 70 6F 72 61 |  Corpora
    0020| 74 69 6F 6E 2E 20 20 54 | tion.  T
    0028| 65 6E 73 20 6F 66 20 74 | ens of t
    0030| 68 6F 75 73 61 6E 64 73 | housands
    0038| 20 6F 66 20 6D 61 6E 2D |  of man-
    0040| 68 6F 75 72 73 20 68 61 | hours ha
    0048| 76 65 20 62 65 65 6E 20 | ve been 
    0050| 73 70 65 6E 74 20 74 6F | spent to
    0058| 20 6D 61 6B 65 20 74 68 |  make th
    0060| 69 73 20 70 72 6F 64 75 | is produ
    0068| 63 74 20 70 6F 73 73 69 | ct possi
    0070| 62 6C 65 2C 20 73 6F 20 | ble, so 
    0078| 74 68 61 74 20 79 6F 75 | that you
    0080| 2C 20 74 68 65 20 75 73 | , the us
    0088| 65 72 2C 20 63 61 6E 20 | er, can 
    0090| 75 73 65 20 68 69 67 68 | use high
    0098| 20 71 75 61 6C 69 74 79 |  quality
    00A0| 20 70 72 6F 67 72 61 6D |  program
    00A8| 73 2E 20 20 49 66 20 79 | s.  If y
    00B0| 6F 75 20 73 74 65 61 6C | ou steal
    00B8| 20 74 68 69 73 20 73 6F |  this so
    00C0| 66 74 77 61 72 65 2C 20 | ftware, 
    00C8| 74 68 65 6E 20 77 65 20 | then we 
    00D0| 77 69 6C 6C 20 6E 6F 74 | will not
    00D8| 20 72 65 63 65 69 76 65 |  receive
    00E0| 20 74 68 65 20 66 72 75 |  the fru
    00E8| 69 74 73 20 6F 66 20 6F | its of o
    00F0| 75 72 20 6C 61 62 6F 72 | ur labor
    00F8| 2E 20 20 20 20 20 20 20 | .       

    ---

    MFM Sector
    Sector ID:002
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xFE0C (Ok)
    Data CRC:0x45DB (Ok)
    Start Sector cell:7856
    Start Sector Data cell:8560
    End Sector cell:12752
    Number of cells:4896

    0000| 53 74 65 61 6C 69 6E 67 | Stealing
    0008| 20 73 6F 66 74 77 61 72 |  softwar
    0010| 65 20 69 73 20 6E 6F 74 | e is not
    0018| 20 6A 75 73 74 20 61 20 |  just a 
    0020| 63 72 69 6D 65 2C 20 69 | crime, i
    0028| 74 20 69 73 20 61 6C 73 | t is als
    0030| 6F 20 6D 6F 72 61 6C 6C | o morall
    0038| 79 20 77 72 6F 6E 67 2E | y wrong.
    0040| 57 65 20 68 61 76 65 20 | We have 
    0048| 77 6F 72 6B 65 64 20 68 | worked h
    0050| 61 72 64 20 74 6F 20 70 | ard to p
    0058| 72 6F 64 75 63 65 20 74 | roduce t
    0060| 68 69 73 20 70 72 6F 67 | his prog
    0068| 72 61 6D 2C 20 62 75 74 | ram, but
    0070| 20 77 65 20 63 61 6E 6E |  we cann
    0078| 6F 74 20 6B 65 65 70 20 | ot keep 
    0080| 77 6F 72 6B 69 6E 67 20 | working 
    0088| 69 66 20 77 65 20 61 72 | if we ar
    0090| 65 20 6E 6F 74 20 70 61 | e not pa
    0098| 69 64 2E 20 20 49 66 20 | id.  If 
    00A0| 63 72 69 6D 69 6E 61 6C | criminal
    00A8| 73 20 66 6F 72 63 65 20 | s force 
    00B0| 75 73 20 6F 75 74 20 6F | us out o
    00B8| 66 20 62 75 73 69 6E 65 | f busine
    00C0| 73 73 2C 20 74 68 65 6E | ss, then
    00C8| 20 77 65 20 77 69 6C 6C |  we will
    00D0| 20 6E 6F 20 6C 6F 6E 67 |  no long
    00D8| 65 72 20 62 65 20 61 62 | er be ab
    00E0| 6C 65 20 74 6F 20 70 72 | le to pr
    00E8| 6F 64 75 63 65 20 70 72 | oduce pr
    00F0| 6F 67 72 61 6D 73 20 74 | ograms t
    00F8| 68 61 74 20 70 65 6F 70 | hat peop

    ---

    MFM Sector
    Sector ID:003
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xCD3D (Ok)
    Data CRC:0x76B4 (Ok)
    Start Sector cell:13104
    Start Sector Data cell:13808
    End Sector cell:18000
    Number of cells:4896

    0000| 6C 65 20 63 61 6E 20 75 | le can u
    0008| 73 65 2E 20 20 49 66 20 | se.  If 
    0010| 63 72 69 6D 69 6E 61 6C | criminal
    0018| 73 20 73 74 6F 70 20 73 | s stop s
    0020| 74 65 61 6C 69 6E 67 20 | tealing 
    0028| 6F 75 72 20 73 6F 66 74 | our soft
    0030| 77 61 72 65 2C 20 74 68 | ware, th
    0038| 65 6E 20 77 65 20 77 69 | en we wi
    0040| 62 65 20 61 62 6C 65 20 | be able 
    0048| 74 6F 20 77 72 69 74 65 | to write
    0050| 20 6D 6F 72 65 20 70 72 |  more pr
    0058| 6F 67 72 61 6D 73 2C 20 | ograms, 
    0060| 6D 61 6B 65 20 74 68 65 | make the
    0068| 6D 20 6D 6F 72 65 20 61 | m more a
    0070| 64 76 61 6E 63 65 64 2C | dvanced,
    0078| 20 61 6E 64 20 73 65 6C |  and sel
    0080| 6C 20 74 68 65 6D 20 61 | l them a
    0088| 74 20 61 20 6C 6F 77 65 | t a lowe
    0090| 72 20 70 72 69 63 65 2E | r price.
    0098| 20 20 54 68 69 6E 6B 20 |   Think 
    00A0| 61 62 6F 75 74 20 69 74 | about it
    00A8| 2E 20 20 20 20 20 20 20 | .       
    00B0| 20 20 20 20 20 20 20 20 |         
    00B8| 20 20 20 20 20 20 20 20 |         
    00C0| 20 20 20 20 20 20 20 20 |         
    00C8| 20 20 20 20 20 20 20 20 |         
    00D0| 20 20 20 20 20 20 20 20 |         
    00D8| 20 20 20 20 20 20 20 20 |         
    00E0| 20 20 20 20 20 20 20 20 |         
    00E8| 20 20 20 20 20 20 20 20 |         
    00F0| 20 20 20 20 20 20 20 20 |         
    00F8| 20 20 20 20 20 20 20 20 |         

    ---

    MFM Sector
    Sector ID:004
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x54AA (Ok)
    Data CRC:0x4C75 (Ok)
    Start Sector cell:18352
    Start Sector Data cell:19056
    End Sector cell:23248
    Number of cells:4896

    0000| 57 65 20 77 69 6C 6C 20 | We will 
    0008| 70 72 6F 73 65 63 75 74 | prosecut
    0010| 65 20 61 6E 79 6F 6E 65 | e anyone
    0018| 20 77 65 20 66 69 6E 64 |  we find
    0020| 20 73 74 65 61 6C 69 6E |  stealin
    0028| 67 20 6F 75 72 20 73 6F | g our so
    0030| 66 74 77 61 72 65 2E 20 | ftware. 
    0038| 20 49 66 20 79 6F 75 20 |  If you 
    0040| 61 72 65 20 63 61 75 67 | are caug
    0048| 68 74 2C 20 69 74 20 69 | ht, it i
    0050| 73 20 75 6E 6C 69 6B 65 | s unlike
    0058| 6C 79 20 74 68 61 74 20 | ly that 
    0060| 79 6F 75 20 77 69 6C 6C | you will
    0068| 20 65 76 65 72 20 62 65 |  ever be
    0070| 20 61 62 6C 65 20 74 6F |  able to
    0078| 20 67 65 74 20 61 20 6A |  get a j
    0080| 6F 62 20 77 69 74 68 20 | ob with 
    0088| 61 6E 79 20 63 6F 6D 70 | any comp
    0090| 61 6E 79 20 69 6E 20 74 | any in t
    0098| 68 69 73 20 66 69 65 6C | his fiel
    00A0| 64 2E 20 20 44 6F 6E 27 | d.  Don'
    00A8| 74 20 72 69 73 6B 20 69 | t risk i
    00B0| 74 2E 20 20 49 66 20 79 | t.  If y
    00B8| 6F 75 20 61 72 65 20 6E | ou are n
    00C0| 6F 74 20 68 6F 6E 65 73 | ot hones
    00C8| 74 2C 20 77 65 20 77 69 | t, we wi
    00D0| 6C 6C 20 6E 6F 74 20 68 | ll not h
    00D8| 61 76 65 20 6D 65 72 63 | ave merc
    00E0| 79 20 6F 6E 20 79 6F 75 | y on you
    00E8| 2E 20 20 20 20 20 20 20 | .       
    00F0| 20 20 20 20 20 20 20 20 |         
    00F8| 20 20 20 20 20 20 20 20 |         

    ---

    MFM Sector
    Sector ID:005
    Track ID:039 - Side ID:001
    Size:01024 (ID:0x03)
    DataMark:0xFB
    Head CRC:0x47D9 (Ok)
    Data CRC:0xEDED (BAD CRC!)
    Start Sector cell:23600
    Start Sector Data cell:24304
    End Sector cell:40784
    Number of cells:17184

    0000| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0008| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0010| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0018| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0020| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0028| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0030| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0038| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0040| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0048| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0050| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0058| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0060| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0068| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0070| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0078| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0080| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0088| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0090| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0098| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0100| CA B7 4E 4E 4E 4E 4E 4E | ..NNNNNN
    0108| 4E 4E 4E 4E 00 00 00 00 | NNNN....
    0110| 00 00 00 00 00 00 00 00 | ........
    0118| A1 A1 A1 FE 27 01 06 01 | ....'...
    0120| 32 C8 4E 4E 4E 4E 4E 4E | 2.NNNNNN
    0128| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    0130| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    0138| 00 00 00 00 00 00 00 00 | ........
    0140| 00 00 00 00 0A 1A 1A 1F | ........
    0148| B4 36 F7 07 97 26 96 76 | .6...&.v
    0150| 87 42 02 03 13 93 83 32 | .B.....2
    0158| 06 27 92 04 D6 96 37 26 | .'....7&
    0160| F7 36 F6 67 40 D0 A5 76 | .6.g@..v
    0168| F7 26 42 04 67 26 56 56 | .&B.g&VV
    0170| 46 F6 D2 04 66 96 76 87 | F...f.v.
    0178| 46 57 27 33 A0 D0 A5 26 | FW'3...&
    0180| 96 36 86 17 26 42 04 27 | .6..&B.'
    0188| 26 F6 46 96 50 D0 A4 A6 | &.F.P...
    0190| 16 26 52 04 26 C7 56 D6 | .&R.&.V.
    0198| 56 E7 46 86 16 C0 D0 A4 | V.F.....
    01A0| A6 56 66 62 04 86 17 26 | .Vfb...&
    01A8| 26 57 27 30 D0 A4 46 F7 | &W'0..F.
    01B0| 56 72 04 B6 C7 56 E6 46 | Vr...V.F
    01B8| 57 20 D0 A4 27 27 56 36 | W ..''V6
    01C0| 52 04 C6 56 16 B0 D0 A4 | R..V....
    01C8| 67 26 16 E6 B2 04 C6 96 | g&......
    01D0| 16 E6 70 D0 A4 36 17 26 | ..p..6.&
    01D8| C2 04 D6 34 36 F6 E6 E6 | ...46...
    01E0| 56 C6 C0 D0 A4 46 17 66 | V....F.f
    01E8| 96 42 05 06 16 C6 D6 57 | .B.....W
    01F0| 20 D0 A4 36 87 26 97 32 |  ..6.&.2
    01F8| 05 06 57 46 57 27 30 D0 | ..WFW'0.
    0200| A4 A6 56 66 62 05 26 16 | ..Vfb.&.
    0208| 96 B6 57 30 D0 A5 46 F6 | ..W0..F.
    0210| D2 05 26 56 57 66 50 D0 | ..&VWfP.
    0218| A4 B6 56 E2 05 36 86 17 | ..V..6..
    0220| 06 97 26 F0 D0 A4 36 86 | ..&...6.
    0228| 17 26 C6 57 32 05 36 96 | .&.W2.6.
    0230| D6 F6 E7 96 90 D0 A4 77 | .......w
    0238| 26 56 72 04 36 F7 80 D0 | &Vr.6...
    0240| A5 06 17 42 05 46 80 00 | ...B.F..
    0248| 3B 61 B4 EC 9C 9C 9C 9C | ;a......
    0250| 9C 9C 9C 9C 9C 00 00 00 | ........
    0258| 00 00 00 00 00 00 00 00 | ........
    0260| 01 43 43 43 FC 4E 02 0E | .CCC.N..
    0268| 02 03 F2 9C 9C 9C 9C 9C | ........
    0270| 9C 9C 9C 9C 9C 9C 9C 9C | ........
    0278| 9C 9C 9C 9C 9C 9C 9C 9C | ........
    0280| 9C 00 00 00 00 00 00 00 | ........
    0288| 00 00 00 00 01 43 43 43 | .....CCC
    0290| F7 ED ED ED ED ED ED ED | ........
    0298| ED ED ED ED ED ED ED ED | ........
    02A0| ED ED ED ED ED ED ED ED | ........
    02A8| ED ED ED ED ED ED ED ED | ........
    02B0| ED ED ED ED ED ED ED ED | ........
    02B8| ED ED ED ED ED ED ED ED | ........
    02C0| ED ED ED ED ED ED ED ED | ........
    02C8| ED ED ED ED ED ED ED ED | ........
    02D0| ED ED ED ED ED ED ED ED | ........
    02D8| ED ED ED ED ED ED ED ED | ........
    02E0| ED ED ED ED ED ED ED ED | ........
    02E8| ED ED ED ED ED ED ED ED | ........
    02F0| ED ED ED ED ED ED ED ED | ........
    02F8| ED ED ED ED ED ED ED ED | ........
    0300| ED ED ED ED ED ED ED ED | ........
    0308| ED ED ED ED ED ED ED ED | ........
    0310| ED ED ED ED ED ED ED ED | ........
    0318| ED ED ED ED ED ED ED ED | ........
    0320| ED ED ED ED ED ED ED ED | ........
    0328| ED ED ED ED ED ED ED ED | ........
    0330| ED ED ED ED ED ED ED ED | ........
    0338| ED ED ED ED ED ED ED ED | ........
    0340| ED ED ED ED ED ED ED ED | ........
    0348| ED ED ED ED ED ED ED ED | ........
    0350| ED ED ED ED ED ED ED ED | ........
    0358| ED ED ED ED ED ED ED ED | ........
    0360| ED ED ED ED ED ED ED ED | ........
    0368| ED ED ED ED ED ED ED ED | ........
    0370| ED ED ED ED ED ED ED ED | ........
    0378| ED ED ED ED ED ED ED ED | ........
    0380| ED ED ED ED ED ED ED ED | ........
    0388| ED ED ED ED ED ED ED ED | ........
    0390| ED 95 6E 9C 9C 9C 9C 9C | ..n.....
    0398| 9C 9C 9C 9C 9C 00 00 00 | ........
    03A0| 00 00 00 00 00 00 00 00 | ........
    03A8| 01 43 43 43 FC 4E 02 10 | .CCC.N..
    03B0| 02 23 8E 9C 9C 9C 9C 9C | .#......
    03B8| 9C 9C 9C 9C 9C 9C 9C 9C | ........
    03C0| 9C 9C 9C 9C 9C 9C 9C 9C | ........
    03C8| 9C 00 00 00 00 00 00 00 | ........
    03D0| 00 00 00 00 01 43 43 43 | .....CCC
    03D8| F7 ED ED ED ED ED ED ED | ........
    03E0| ED ED ED ED ED ED ED ED | ........
    03E8| ED ED ED ED ED ED ED ED | ........
    03F0| ED ED ED ED ED ED ED ED | ........
    03F8| ED ED ED ED ED ED ED ED | ........

    ---

    MFM Sector
    Sector ID:006
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x32C8 (Ok)
    Data CRC:0xB61B (Ok)
    Start Sector cell:28848
    Start Sector Data cell:29560
    End Sector cell:33752
    Number of cells:4904

    0000| 43 6F 70 79 72 69 67 68 | Copyrigh
    0008| 74 20 20 31 39 38 33 20 | t  1983 
    0010| 62 79 20 4D 69 63 72 6F | by Micro
    0018| 73 6F 66 74 0D 0A 57 6F | soft..Wo
    0020| 72 64 20 46 72 65 65 64 | rd Freed
    0028| 6F 6D 20 46 69 67 68 74 | om Fight
    0030| 65 72 73 3A 0D 0A 52 69 | ers:..Ri
    0038| 63 68 61 72 64 20 42 72 | chard Br
    0040| 6F 64 69 65 0D 0A 4A 61 | odie..Ja
    0048| 62 65 20 42 6C 75 6D 65 | be Blume
    0050| 6E 74 68 61 6C 0D 0A 4A | nthal..J
    0058| 65 66 66 20 48 61 72 62 | eff Harb
    0060| 65 72 73 0D 0A 44 6F 75 | ers..Dou
    0068| 67 20 4B 6C 75 6E 64 65 | g Klunde
    0070| 72 0D 0A 42 72 75 63 65 | r..Bruce
    0078| 20 4C 65 61 6B 0D 0A 46 |  Leak..F
    0080| 72 61 6E 6B 20 4C 69 61 | rank Lia
    0088| 6E 67 0D 0A 43 61 72 6C | ng..Carl
    0090| 20 4D 63 43 6F 6E 6E 65 |  McConne
    0098| 6C 6C 0D 0A 44 61 76 69 | ll..Davi
    00A0| 64 20 50 61 6C 6D 65 72 | d Palmer
    00A8| 0D 0A 43 68 72 69 73 20 | ..Chris 
    00B0| 50 65 74 65 72 73 0D 0A | Peters..
    00B8| 4A 65 66 66 20 52 61 69 | Jeff Rai
    00C0| 6B 65 73 0D 0A 54 6F 6D | kes..Tom
    00C8| 20 52 65 65 76 65 0D 0A |  Reeve..
    00D0| 4B 65 6E 20 53 68 61 70 | Ken Shap
    00D8| 69 72 6F 0D 0A 43 68 61 | iro..Cha
    00E0| 72 6C 65 73 20 53 69 6D | rles Sim
    00E8| 6F 6E 79 69 0D 0A 47 72 | onyi..Gr
    00F0| 65 67 20 43 6F 78 0D 0A | eg Cox..
    00F8| 50 61 74 20 54 68 00 03 | Pat Th..

    ---

    MFM Sector
    Sector ID:007
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x01F9 (Ok)
    Data CRC:0xCAB7 (Ok)
    Start Sector cell:34110
    Start Sector Data cell:34814
    End Sector cell:39006
    Number of cells:4896

    0000| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0008| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0010| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0018| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0020| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0028| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0030| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0038| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0040| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0048| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0050| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0058| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0060| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0068| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0070| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0078| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0080| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0088| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0090| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0098| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........

    ---

    MFM Sector
    Sector ID:008
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x11C7 (Ok)
    Data CRC:0xCAB7 (Ok)
    Start Sector cell:39358
    Start Sector Data cell:40062
    End Sector cell:44254
    Number of cells:4896

    0000| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0008| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0010| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0018| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0020| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0028| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0030| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0038| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0040| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0048| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0050| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0058| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0060| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0068| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0070| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0078| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0080| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0088| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0090| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0098| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........

    ---

    MFM Sector
    Sector ID:009
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x22F6 (Ok)
    Data CRC:0x9569 (Ok)
    Start Sector cell:44606
    Start Sector Data cell:45310
    End Sector cell:49502
    Number of cells:4896

    0000| 54 68 69 73 20 70 72 6F | This pro
    0008| 67 72 61 6D 20 77 61 73 | gram was
    0010| 20 62 72 6F 75 67 68 74 |  brought
    0018| 20 74 6F 20 79 6F 75 20 |  to you 
    0020| 62 79 20 74 68 65 20 68 | by the h
    0028| 61 72 64 20 77 6F 72 6B | ard work
    0030| 20 6F 66 20 74 68 65 20 |  of the 
    0038| 70 65 6F 70 6C 65 20 61 | people a
    0040| 74 20 4D 69 63 72 6F 73 | t Micros
    0048| 6F 66 74 2C 20 69 6E 63 | oft, inc
    0050| 6C 75 64 69 6E 67 2E 2E | luding..
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    ---

    MFM Sector
    Sector ID:010
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x77A5 (Ok)
    Data CRC:0x7545 (Ok)
    Start Sector cell:49854
    Start Sector Data cell:50558
    End Sector cell:54750
    Number of cells:4896

    0000| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0008| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0010| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0018| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0020| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0028| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0030| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0038| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0040| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0048| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0050| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    ---

    MFM Sector
    Sector ID:011
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x4494 (Ok)
    Data CRC:0x7545 (Ok)
    Start Sector cell:55102
    Start Sector Data cell:55806
    End Sector cell:59998
    Number of cells:4896

    0000| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0008| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0010| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0018| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0020| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0028| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0030| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0038| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0040| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0048| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0050| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    ---

    MFM Sector
    Sector ID:012
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xDD03 (Ok)
    Data CRC:0x7545 (Ok)
    Start Sector cell:60350
    Start Sector Data cell:61054
    End Sector cell:65246
    Number of cells:4896

    0000| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0008| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0010| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0018| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0020| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0028| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0030| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0038| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0040| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0048| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0050| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    Track RPM : 300 RPM

    Bitrate : VARIABLE

    Track format :
    ISOIBM_MFM_ENCODING

    Track len : 100308 cells
    Number of side : 2

    Interface mode:
    GENERIC_SHUGART_DD_FLOPPYMODE
    Shugart Interface

The following *diskdump* command was used to reflect the above data in our disk image:

    diskdump --disk=archive/MSWORD-115-PROGRAM-BACKUP.img --format=json --output=MSWORD-115-PROGRAM.json --suppData=/software/pcx86/app/microsoft/word/1.15/index.md --overwrite
