software/pcx86/app/microsoft/word/2.00/index.md
---
layout: page
title: Microsoft Word 2.00
permalink: /software/pcx86/app/microsoft/word/2.00/
preview: https://miscdisks.pcjs.org/pcx86/app/microsoft/word/2.00/WORD20-DISK1.jpg
machines:
  - id: ibm5160
    type: pcx86
    config: /machines/pcx86/ibm/5160/cga/256kb/machine.xml
    autoGen: true
    autoMount:
      B: "MS Word 2.00 (Disk 1)"
    autoType: $date\r$time\rB:\rDIR\r
---

{% include machine.html id="ibm5160" %}

### Directory of MS Word 2.00 (Disk 1)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*    10240   2-08-85  12:00p
    IBMDOS   COM*    30720   2-08-85  12:00p
    MW       COM*    27628   2-08-85  12:00p
    MW       COD*    47552   2-08-85  12:00p
    MW       DAT*    17072   2-08-85  12:00p
    WORD     COM      2062   2-08-85  12:00p
    WORDUTIL COM      2772   2-08-85  12:00p
    MW       PGM     77654   2-08-85  12:00p
    MW       HLP     65663   2-08-85  12:00p
    HYPH     DAT     23816   2-08-85  12:00p
    TTY      PRD       820   2-08-85  12:00p
           11 file(s)     305999 bytes
                           47104 bytes free

![MS Word 2.00 (Disk 1)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/word/2.00/WORD20-DISK1.jpg)

[[Source](https://winworldpc.com/product/microsoft-word/2x-dos)]

### Directory of MS Word 2.00 (Disk 1 Backup)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*    10240   2-08-85  12:00p
    IBMDOS   COM*    30720   2-08-85  12:00p
    MW       COM*    27628   2-08-85  12:00p
    MW       COD*    47552   2-08-85  12:00p
    MW       DAT*    17072   2-08-85  12:00p
    WORD     COM      2062   2-08-85  12:00p
    WORDUTIL COM      2772   2-08-85  12:00p
    MW       PGM     77654   2-08-85  12:00p
    MW       HLP     65663   2-08-85  12:00p
    HYPH     DAT     23816   2-08-85  12:00p
    TTY      PRD       820   2-08-85  12:00p
           11 file(s)     305999 bytes
                           47104 bytes free

![MS Word 2.00 (Disk 1 Backup)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/word/2.00/WORD20-DISK1-BACKUP.jpg)

[[Source](https://winworldpc.com/product/microsoft-word/2x-dos)]

### Directory of MS Word 2.00 (Disk 2)

     Volume in drive A has no label
     Directory of A:\

    CONVWS   EXE     39552   2-08-85  12:00p
    CONVERTD EXE     34944   2-08-85  12:00p
    CONVPRD  EXE     27562   2-08-85  12:00p
    SETUP    EXE     39816   2-08-85  12:00p
    MEMO     STY      1024   2-08-85  12:00p
    FULL     STY      1152   2-08-85  12:00p
    OUTLINE  STY      1024   2-08-85  12:00p
    OUTLINE2 STY      1024   2-08-85  12:00p
    SEMI     STY      1152   2-08-85  12:00p
    MOUSE    SYS      7152   2-08-85  12:00p
    PRINTERS DOC      3712   2-08-85  12:00p
    CONVPRD  DOC     31360   2-08-85  12:00p
    SAMPLE1  DOC      1920   2-08-85  12:00p
    SAMPLE2  DOC      1920   2-08-85  12:00p
    OUTLINE  DOC      1152   2-08-85  12:00p
    SMOKING  DOC      1920   2-08-85  12:00p
    README   DOC      3072   2-08-85  12:00p
    MSSETUP  PS       2610   2-08-85  12:00p
    QUME11   PRD      1570   2-08-85  12:00p
    D630ECS  PRD      1708   2-08-85  12:00p
    PLAIN    PRD       820   2-08-85  12:00p
    TTY      PRD       820   2-08-85  12:00p
    D620     PRD      1698   2-08-85  12:00p
    D630A    PRD      1820   2-08-85  12:00p
    MSPRINT  PRD      1066   2-08-85  12:00p
    EPSONFX  PRD      2140   2-08-85  12:00p
    EPSONMX  PRD      1000   2-08-85  12:00p
    EPSONMXG PRD      1136   2-08-85  12:00p
    TTYWHEEL PRD      1556   2-08-85  12:00p
    EPSONRX  PRD      1270   2-08-85  12:00p
    GRAFTRAX PRD      1124   2-08-85  12:00p
    D630     PRD      1790   2-08-85  12:00p
    IBMGRAPH PRD      1026   2-08-85  12:00p
    ITOHSTAR PRD      1509   2-08-85  12:00p
    NEC3550  PRD      2004   2-08-85  12:00p
    NEC7710  PRD      1920   2-08-85  12:00p
    OKI2410  PRD      1137   2-08-85  12:00p
    OKI92    PRD      1288   2-08-85  12:00p
    TI850    PRD      1134   2-08-85  12:00p
    TTYBS    PRD       932   2-08-85  12:00p
    IBMWHEEL PRD      1386   2-08-85  12:00p
    HPLASCR  PRD      1047   2-08-85  12:00p
    RADIX    PRD      1312   2-08-85  12:00p
    DELTA    PRD      1300   2-08-85  12:00p
    MT1X     PRD      1349   2-08-85  12:00p
    MT80     PRD      1136   2-08-85  12:00p
    HP2934A  PRD      4462   2-08-85  12:00p
    EPSONLQ  PRD      2158   2-08-85  12:00p
    X2700    PRD      6885   2-08-85  12:00p
    HPLASPS  PRD      2251   2-08-85  12:00p
    TTYFF    PRD       820   2-08-85  12:00p
    EPSONFXQ PRD      2140   2-08-85  12:00p
    HPLASCR2 PRD      1118   2-08-85  12:00p
    BROTHER  PRD      1662   2-08-85  12:00p
    HPTHINK  PRD       908   2-08-85  12:00p
    ANDX9625 PRD      1682   2-08-85  12:00p
    ANDX9725 PRD      4596   2-08-85  12:00p
    ANDX6500 PRD      1728   2-08-85  12:00p
    ANDX60LT PRD      3868   2-08-85  12:00p
    ANDX60CS PRD      1002   2-08-85  12:00p
    TI855D   PRD      7360   2-08-85  12:00p
    TI855Q   PRD      7360   2-08-85  12:00p
    HPLASLAN PRD      1118   2-08-85  12:00p
    HPLASLG  PRD      1126   2-08-85  12:00p
    HPLASPR  PRD      1110   2-08-85  12:00p
    HPLASRMN PRD      3583   2-08-85  12:00p
    TOSH1340 PRD      1037   2-08-85  12:00p
    BL45LQ   PRD      1522   2-08-85  12:00p
    DECLN03  PRD      1003   2-08-85  12:00p
    IBMQUIET PRD       957   2-08-85  12:00p
    ITOHF10  PRD      1810   2-08-85  12:00p
    SREXP    PRD      1382   2-08-85  12:00p
    APPLASER PRD     12406   2-08-85  12:00p
    TOSH1351 PRD      1175   2-08-85  12:00p
           74 file(s)     318295 bytes
                            6144 bytes free

![MS Word 2.00 (Disk 2)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/word/2.00/WORD20-DISK2.jpg)

[[Source](https://winworldpc.com/product/microsoft-word/2x-dos)]

### Directory of MS Word 2.00 (Disk 3)

     Volume in drive A has no label
     Directory of A:\

    LOOKUP   COM      3560   2-04-85  12:00p
    ANAGRAM  COM      2926   2-04-85  12:00p
    WORDFIND COM      2844   2-04-85  12:00p
    SPELL    HLP      9728   2-04-85  12:00p
    MAINDICT CMP    212352   2-04-85  12:00p
    HIGHFREQ CMP      5888   2-04-85  12:00p
    TYPOS    DOC      2176   2-04-85  12:00p
    SPELL    COM     17602   2-04-85   6:08p
    PROOF    COM      6565   2-04-85  12:00p
    MARKFIX  COM      6839   2-04-85  12:00p
    WC       COM      2432   2-04-85  12:00p
    WORDFREQ COM      4352   2-04-85  12:00p
           12 file(s)     277264 bytes
                           78848 bytes free

![MS Word 2.00 (Disk 3)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/word/2.00/WORD20-DISK3.jpg)

[[Source](https://winworldpc.com/product/microsoft-word/2x-dos)]

### Directory of MS Word 2.00 (Disk 4)

     Volume in drive A has no label
     Directory of A:\

    LESSONS  CTX    188066   1-18-85   1:43a
    LEARN    COM     26252   1-29-85  12:18p
    LW       COD     20894   1-30-85   9:35a
    LW       DAT     15928   1-30-85   9:35a
    LESSONS  SCN     48891   1-18-85   1:43a
    LESSONS  SOB     47190   1-18-85   1:43a
    LESSONS  CHK       104   4-20-86   3:28p
            7 file(s)     347325 bytes
                           11264 bytes free

![MS Word 2.00 (Disk 4)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/word/2.00/WORD20-DISK4.jpg)

### Copy-Protection Information

    MFM Sector
    Sector ID:001
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xAB5F (Ok)
    Data CRC:0x2D75 (Ok)
    Start Sector cell:2365
    Start Sector Data cell:3069
    End Sector cell:7261
    Number of cells:4896

    0000| 43 6F 70 79 72 69 67 68 | Copyrigh
    0008| 74 20 31 39 38 34 20 4D | t 1984 M
    0010| 69 63 72 6F 73 6F 66 74 | icrosoft
    0018| 20 43 6F 72 70 6F 72 61 |  Corpora
    0020| 74 69 6F 6E 2E 20 20 54 | tion.  T
    0028| 65 6E 73 20 6F 66 20 74 | ens of t
    0030| 68 6F 75 73 61 6E 64 73 | housands
    0038| 20 6F 66 20 6D 61 6E 2D |  of man-
    0040| 68 6F 75 72 73 20 68 61 | hours ha
    0048| 76 65 20 62 65 65 6E 20 | ve been 
    0050| 73 70 65 6E 74 20 74 6F | spent to
    0058| 20 6D 61 6B 65 20 74 68 |  make th
    0060| 69 73 20 70 72 6F 64 75 | is produ
    0068| 63 74 20 70 6F 73 73 69 | ct possi
    0070| 62 6C 65 2C 20 73 6F 20 | ble, so 
    0078| 74 68 61 74 20 79 6F 75 | that you
    0080| 2C 20 74 68 65 20 75 73 | , the us
    0088| 65 72 2C 20 63 61 6E 20 | er, can 
    0090| 75 73 65 20 68 69 67 68 | use high
    0098| 20 71 75 61 6C 69 74 79 |  quality
    00A0| 20 70 72 6F 67 72 61 6D |  program
    00A8| 73 2E 20 20 49 66 20 79 | s.  If y
    00B0| 6F 75 20 73 74 65 61 6C | ou steal
    00B8| 20 74 68 69 73 20 73 6F |  this so
    00C0| 66 74 77 61 72 65 2C 20 | ftware, 
    00C8| 74 68 65 6E 20 77 65 20 | then we 
    00D0| 77 69 6C 6C 20 6E 6F 74 | will not
    00D8| 20 72 65 63 65 69 76 65 |  receive
    00E0| 20 74 68 65 20 66 72 75 |  the fru
    00E8| 69 74 73 20 6F 66 20 6F | its of o
    00F0| 75 72 20 6C 61 62 6F 72 | ur labor
    00F8| 2E 20 20 20 20 20 20 20 | .       

    ---

    MFM Sector
    Sector ID:002
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xFE0C (Ok)
    Data CRC:0x45DB (Ok)
    Start Sector cell:7613
    Start Sector Data cell:8317
    End Sector cell:12509
    Number of cells:4896

    0000| 53 74 65 61 6C 69 6E 67 | Stealing
    0008| 20 73 6F 66 74 77 61 72 |  softwar
    0010| 65 20 69 73 20 6E 6F 74 | e is not
    0018| 20 6A 75 73 74 20 61 20 |  just a 
    0020| 63 72 69 6D 65 2C 20 69 | crime, i
    0028| 74 20 69 73 20 61 6C 73 | t is als
    0030| 6F 20 6D 6F 72 61 6C 6C | o morall
    0038| 79 20 77 72 6F 6E 67 2E | y wrong.
    0040| 57 65 20 68 61 76 65 20 | We have 
    0048| 77 6F 72 6B 65 64 20 68 | worked h
    0050| 61 72 64 20 74 6F 20 70 | ard to p
    0058| 72 6F 64 75 63 65 20 74 | roduce t
    0060| 68 69 73 20 70 72 6F 67 | his prog
    0068| 72 61 6D 2C 20 62 75 74 | ram, but
    0070| 20 77 65 20 63 61 6E 6E |  we cann
    0078| 6F 74 20 6B 65 65 70 20 | ot keep 
    0080| 77 6F 72 6B 69 6E 67 20 | working 
    0088| 69 66 20 77 65 20 61 72 | if we ar
    0090| 65 20 6E 6F 74 20 70 61 | e not pa
    0098| 69 64 2E 20 20 49 66 20 | id.  If 
    00A0| 63 72 69 6D 69 6E 61 6C | criminal
    00A8| 73 20 66 6F 72 63 65 20 | s force 
    00B0| 75 73 20 6F 75 74 20 6F | us out o
    00B8| 66 20 62 75 73 69 6E 65 | f busine
    00C0| 73 73 2C 20 74 68 65 6E | ss, then
    00C8| 20 77 65 20 77 69 6C 6C |  we will
    00D0| 20 6E 6F 20 6C 6F 6E 67 |  no long
    00D8| 65 72 20 62 65 20 61 62 | er be ab
    00E0| 6C 65 20 74 6F 20 70 72 | le to pr
    00E8| 6F 64 75 63 65 20 70 72 | oduce pr
    00F0| 6F 67 72 61 6D 73 20 74 | ograms t
    00F8| 68 61 74 20 70 65 6F 70 | hat peop

    ---

    MFM Sector
    Sector ID:003
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xCD3D (Ok)
    Data CRC:0x76B4 (Ok)
    Start Sector cell:12861
    Start Sector Data cell:13565
    End Sector cell:17757
    Number of cells:4896

    0000| 6C 65 20 63 61 6E 20 75 | le can u
    0008| 73 65 2E 20 20 49 66 20 | se.  If 
    0010| 63 72 69 6D 69 6E 61 6C | criminal
    0018| 73 20 73 74 6F 70 20 73 | s stop s
    0020| 74 65 61 6C 69 6E 67 20 | tealing 
    0028| 6F 75 72 20 73 6F 66 74 | our soft
    0030| 77 61 72 65 2C 20 74 68 | ware, th
    0038| 65 6E 20 77 65 20 77 69 | en we wi
    0040| 62 65 20 61 62 6C 65 20 | be able 
    0048| 74 6F 20 77 72 69 74 65 | to write
    0050| 20 6D 6F 72 65 20 70 72 |  more pr
    0058| 6F 67 72 61 6D 73 2C 20 | ograms, 
    0060| 6D 61 6B 65 20 74 68 65 | make the
    0068| 6D 20 6D 6F 72 65 20 61 | m more a
    0070| 64 76 61 6E 63 65 64 2C | dvanced,
    0078| 20 61 6E 64 20 73 65 6C |  and sel
    0080| 6C 20 74 68 65 6D 20 61 | l them a
    0088| 74 20 61 20 6C 6F 77 65 | t a lowe
    0090| 72 20 70 72 69 63 65 2E | r price.
    0098| 20 20 54 68 69 6E 6B 20 |   Think 
    00A0| 61 62 6F 75 74 20 69 74 | about it
    00A8| 2E 20 20 20 20 20 20 20 | .       
    00B0| 20 20 20 20 20 20 20 20 |         
    00B8| 20 20 20 20 20 20 20 20 |         
    00C0| 20 20 20 20 20 20 20 20 |         
    00C8| 20 20 20 20 20 20 20 20 |         
    00D0| 20 20 20 20 20 20 20 20 |         
    00D8| 20 20 20 20 20 20 20 20 |         
    00E0| 20 20 20 20 20 20 20 20 |         
    00E8| 20 20 20 20 20 20 20 20 |         
    00F0| 20 20 20 20 20 20 20 20 |         
    00F8| 20 20 20 20 20 20 20 20 |         

    ---

    MFM Sector
    Sector ID:004
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x54AA (Ok)
    Data CRC:0x4C75 (Ok)
    Start Sector cell:18109
    Start Sector Data cell:18813
    End Sector cell:23005
    Number of cells:4896

    0000| 57 65 20 77 69 6C 6C 20 | We will 
    0008| 70 72 6F 73 65 63 75 74 | prosecut
    0010| 65 20 61 6E 79 6F 6E 65 | e anyone
    0018| 20 77 65 20 66 69 6E 64 |  we find
    0020| 20 73 74 65 61 6C 69 6E |  stealin
    0028| 67 20 6F 75 72 20 73 6F | g our so
    0030| 66 74 77 61 72 65 2E 20 | ftware. 
    0038| 20 49 66 20 79 6F 75 20 |  If you 
    0040| 61 72 65 20 63 61 75 67 | are caug
    0048| 68 74 2C 20 69 74 20 69 | ht, it i
    0050| 73 20 75 6E 6C 69 6B 65 | s unlike
    0058| 6C 79 20 74 68 61 74 20 | ly that 
    0060| 79 6F 75 20 77 69 6C 6C | you will
    0068| 20 65 76 65 72 20 62 65 |  ever be
    0070| 20 61 62 6C 65 20 74 6F |  able to
    0078| 20 67 65 74 20 61 20 6A |  get a j
    0080| 6F 62 20 77 69 74 68 20 | ob with 
    0088| 61 6E 79 20 63 6F 6D 70 | any comp
    0090| 61 6E 79 20 69 6E 20 74 | any in t
    0098| 68 69 73 20 66 69 65 6C | his fiel
    00A0| 64 2E 20 20 44 6F 6E 27 | d.  Don'
    00A8| 74 20 72 69 73 6B 20 69 | t risk i
    00B0| 74 2E 20 20 49 66 20 79 | t.  If y
    00B8| 6F 75 20 61 72 65 20 6E | ou are n
    00C0| 6F 74 20 68 6F 6E 65 73 | ot hones
    00C8| 74 2C 20 77 65 20 77 69 | t, we wi
    00D0| 6C 6C 20 6E 6F 74 20 68 | ll not h
    00D8| 61 76 65 20 6D 65 72 63 | ave merc
    00E0| 79 20 6F 6E 20 79 6F 75 | y on you
    00E8| 2E 20 20 20 20 20 20 20 | .       
    00F0| 20 20 20 20 20 20 20 20 |         
    00F8| 20 20 20 20 20 20 20 20 |         

    ---

    MFM Sector
    Sector ID:005
    Track ID:039 - Side ID:001
    Size:01024 (ID:0x03)
    DataMark:0xFB
    Head CRC:0x47D9 (Ok)
    Data CRC:0xF6F6 (BAD CRC!)
    Start Sector cell:23357
    Start Sector Data cell:24061
    End Sector cell:40541
    Number of cells:17184

    0000| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0008| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0010| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0018| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0020| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0028| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0030| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0038| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0040| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0048| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0050| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0058| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0060| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0068| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0070| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0078| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0080| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0088| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0090| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0098| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0100| CA B7 4E 4E 4E 4E 4E 4E | ..NNNNNN
    0108| 4E 4E 4E 4E 00 00 00 00 | NNNN....
    0110| 00 00 00 00 00 00 00 00 | ........
    0118| A1 A1 A1 FE 27 01 06 01 | ....'...
    0120| 32 C8 4E 4E 4E 4E 4E 4E | 2.NNNNNN
    0128| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    0130| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    0138| 00 00 00 00 00 00 00 00 | ........
    0140| 00 00 00 00 A1 A1 A1 FB | ........
    0148| 43 6F 70 79 72 69 67 68 | Copyrigh
    0150| 74 20 20 31 39 38 34 20 | t  1984 
    0158| 62 79 20 4D 69 63 72 6F | by Micro
    0160| 73 6F 66 74 0D 0A 57 6F | soft..Wo
    0168| 72 64 20 46 72 65 65 64 | rd Freed
    0170| 6F 6D 20 46 69 67 68 74 | om Fight
    0178| 65 72 73 3A 0D 0A 52 69 | ers:..Ri
    0180| 63 68 61 72 64 20 42 72 | chard Br
    0188| 6F 64 69 65 0D 0A 4A 61 | odie..Ja
    0190| 62 65 20 42 6C 75 6D 65 | be Blume
    0198| 6E 74 68 61 6C 0D 0A 4A | nthal..J
    01A0| 65 66 66 20 48 61 72 62 | eff Harb
    01A8| 65 72 73 0D 0A 44 6F 75 | ers..Dou
    01B0| 67 20 4B 6C 75 6E 64 65 | g Klunde
    01B8| 72 0D 0A 42 72 75 63 65 | r..Bruce
    01C0| 20 4C 65 61 6B 0D 0A 46 |  Leak..F
    01C8| 72 61 6E 6B 20 4C 69 61 | rank Lia
    01D0| 6E 67 0D 0A 43 61 72 6C | ng..Carl
    01D8| 20 4D 63 43 6F 6E 6E 65 |  McConne
    01E0| 6C 6C 0D 0A 44 61 76 69 | ll..Davi
    01E8| 64 20 50 61 6C 6D 65 72 | d Palmer
    01F0| 0D 0A 43 68 72 69 73 20 | ..Chris 
    01F8| 50 65 74 65 72 73 0D 0A | Peters..
    0200| 4A 65 66 66 20 52 61 69 | Jeff Rai
    0208| 6B 65 73 0D 0A 54 6F 6D | kes..Tom
    0210| 20 52 65 65 76 65 0D 0A |  Reeve..
    0218| 4B 65 6E 20 53 68 61 70 | Ken Shap
    0220| 69 72 6F 0D 0A 43 68 61 | iro..Cha
    0228| 72 6C 65 73 20 53 69 6D | rles Sim
    0230| 6F 6E 79 69 0D 0A 47 72 | onyi..Gr
    0238| 65 67 20 43 6F 78 0D 0A | eg Cox..
    0240| 50 61 74 20 54 68 00 00 | Pat Th..
    0248| 2F 92 4E 4E 4E 4E 4E 4E | /.NNNNNN
    0250| 4E 4E 4E 4E 00 00 00 00 | NNNN....
    0258| 00 00 00 00 00 00 00 00 | ........
    0260| A1 A1 A1 FE 27 01 07 01 | ....'...
    0268| 01 F9 4E 4E 4E 4E 4E 4E | ..NNNNNN
    0270| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    0278| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    0280| 00 00 00 00 00 00 00 00 | ........
    0288| 00 00 00 00 A1 A1 A1 FB | ........
    0290| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0298| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02A0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02A8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02B0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02B8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02C0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02C8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02D0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    02F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0300| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0308| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0310| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0318| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0320| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0328| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0330| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0338| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0340| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0348| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0350| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0358| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0360| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0368| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0370| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0378| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0380| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0388| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0390| CA B7 4E 4E 4E 4E 4E 4E | ..NNNNNN
    0398| 4E 4E 4E 4E 00 00 00 00 | NNNN....
    03A0| 00 00 00 00 00 00 00 00 | ........
    03A8| A1 A1 A1 FE 27 01 08 01 | ....'...
    03B0| 11 C7 4E 4E 4E 4E 4E 4E | ..NNNNNN
    03B8| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    03C0| 4E 4E 4E 4E 4E 4E 4E 4E | NNNNNNNN
    03C8| 00 00 00 00 00 00 00 00 | ........
    03D0| 00 00 00 00 A1 A1 A1 FB | ........
    03D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    03E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    03E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    03F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    03F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........

    ---

    MFM Sector
    Sector ID:006
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x32C8 (Ok)
    Data CRC:0x2F92 (Ok)
    Start Sector cell:28605
    Start Sector Data cell:29309
    End Sector cell:33501
    Number of cells:4896

    0000| 43 6F 70 79 72 69 67 68 | Copyrigh
    0008| 74 20 20 31 39 38 34 20 | t  1984 
    0010| 62 79 20 4D 69 63 72 6F | by Micro
    0018| 73 6F 66 74 0D 0A 57 6F | soft..Wo
    0020| 72 64 20 46 72 65 65 64 | rd Freed
    0028| 6F 6D 20 46 69 67 68 74 | om Fight
    0030| 65 72 73 3A 0D 0A 52 69 | ers:..Ri
    0038| 63 68 61 72 64 20 42 72 | chard Br
    0040| 6F 64 69 65 0D 0A 4A 61 | odie..Ja
    0048| 62 65 20 42 6C 75 6D 65 | be Blume
    0050| 6E 74 68 61 6C 0D 0A 4A | nthal..J
    0058| 65 66 66 20 48 61 72 62 | eff Harb
    0060| 65 72 73 0D 0A 44 6F 75 | ers..Dou
    0068| 67 20 4B 6C 75 6E 64 65 | g Klunde
    0070| 72 0D 0A 42 72 75 63 65 | r..Bruce
    0078| 20 4C 65 61 6B 0D 0A 46 |  Leak..F
    0080| 72 61 6E 6B 20 4C 69 61 | rank Lia
    0088| 6E 67 0D 0A 43 61 72 6C | ng..Carl
    0090| 20 4D 63 43 6F 6E 6E 65 |  McConne
    0098| 6C 6C 0D 0A 44 61 76 69 | ll..Davi
    00A0| 64 20 50 61 6C 6D 65 72 | d Palmer
    00A8| 0D 0A 43 68 72 69 73 20 | ..Chris 
    00B0| 50 65 74 65 72 73 0D 0A | Peters..
    00B8| 4A 65 66 66 20 52 61 69 | Jeff Rai
    00C0| 6B 65 73 0D 0A 54 6F 6D | kes..Tom
    00C8| 20 52 65 65 76 65 0D 0A |  Reeve..
    00D0| 4B 65 6E 20 53 68 61 70 | Ken Shap
    00D8| 69 72 6F 0D 0A 43 68 61 | iro..Cha
    00E0| 72 6C 65 73 20 53 69 6D | rles Sim
    00E8| 6F 6E 79 69 0D 0A 47 72 | onyi..Gr
    00F0| 65 67 20 43 6F 78 0D 0A | eg Cox..
    00F8| 50 61 74 20 54 68 00 00 | Pat Th..

    ---

    MFM Sector
    Sector ID:007
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x01F9 (Ok)
    Data CRC:0xCAB7 (Ok)
    Start Sector cell:33853
    Start Sector Data cell:34557
    End Sector cell:38749
    Number of cells:4896

    0000| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0008| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0010| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0018| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0020| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0028| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0030| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0038| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0040| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0048| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0050| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0058| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0060| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0068| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0070| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0078| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0080| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0088| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0090| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0098| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........

    ---

    MFM Sector
    Sector ID:008
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x11C7 (Ok)
    Data CRC:0xCAB7 (Ok)
    Start Sector cell:39101
    Start Sector Data cell:39805
    End Sector cell:43997
    Number of cells:4896

    0000| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0008| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0010| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0018| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0020| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0028| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0030| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0038| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0040| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0048| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0050| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0058| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0060| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0068| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0070| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0078| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0080| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0088| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0090| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    0098| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00A8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00B8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00C8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00D8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00E8| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F0| F6 F6 F6 F6 F6 F6 F6 F6 | ........
    00F8| F6 F6 F6 F6 F6 F6 F6 F6 | ........

    ---

    MFM Sector
    Sector ID:009
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x22F6 (Ok)
    Data CRC:0x9569 (Ok)
    Start Sector cell:44349
    Start Sector Data cell:45053
    End Sector cell:49245
    Number of cells:4896

    0000| 54 68 69 73 20 70 72 6F | This pro
    0008| 67 72 61 6D 20 77 61 73 | gram was
    0010| 20 62 72 6F 75 67 68 74 |  brought
    0018| 20 74 6F 20 79 6F 75 20 |  to you 
    0020| 62 79 20 74 68 65 20 68 | by the h
    0028| 61 72 64 20 77 6F 72 6B | ard work
    0030| 20 6F 66 20 74 68 65 20 |  of the 
    0038| 70 65 6F 70 6C 65 20 61 | people a
    0040| 74 20 4D 69 63 72 6F 73 | t Micros
    0048| 6F 66 74 2C 20 69 6E 63 | oft, inc
    0050| 6C 75 64 69 6E 67 2E 2E | luding..
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    ---

    MFM Sector
    Sector ID:010
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x77A5 (Ok)
    Data CRC:0x7545 (Ok)
    Start Sector cell:49597
    Start Sector Data cell:50301
    End Sector cell:54493
    Number of cells:4896

    0000| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0008| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0010| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0018| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0020| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0028| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0030| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0038| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0040| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0048| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0050| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    ---

    MFM Sector
    Sector ID:011
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0x4494 (Ok)
    Data CRC:0x7545 (Ok)
    Start Sector cell:54845
    Start Sector Data cell:55549
    End Sector cell:59741
    Number of cells:4896

    0000| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0008| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0010| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0018| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0020| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0028| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0030| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0038| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0040| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0048| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0050| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    ---

    MFM Sector
    Sector ID:012
    Track ID:039 - Side ID:001
    Size:00256 (ID:0x01)
    DataMark:0xFB
    Head CRC:0xDD03 (Ok)
    Data CRC:0x7545 (Ok)
    Start Sector cell:60093
    Start Sector Data cell:60797
    End Sector cell:64989
    Number of cells:4896

    0000| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0008| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0010| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0018| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0020| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0028| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0030| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0038| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0040| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0048| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0050| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0058| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0060| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0068| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0070| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0078| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0080| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0088| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0090| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    0098| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00A8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00B8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00C8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00D8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00E8| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F0| 2E 2E 2E 2E 2E 2E 2E 2E | ........
    00F8| 2E 2E 2E 2E 2E 2E 2E 2E | ........

    ---

    FM Sector
    Sector ID:001
    Track ID:040 - Side ID:000
    Size:00128 (ID:0x00)
    DataMark:0xFB
    Head CRC:0x604E (Ok)
    Data CRC:0x0000 (BAD CRC!)
    Start Sector cell:1345
    Start Sector Data cell:2113
    End Sector cell:6305
    Number of cells:4960

    0000| 01 02 03 04 05 00 01 08 | ........
    0008| 30 C0 00 00 00 00 85 07 | 0.......
    0010| 01 10 58 10 00 08 1D 35 | ..X....5
    0018| 32 33 2D 30 33 37 43 20 | 23-037C 
    0020| 20 20 20 20 20 20 20 49 |        I
    0028| 42 4D 20 4D 2C 39 2F 35 | BM M,9/5
    0030| 31 32 20 4D 43 52 53 46 | 12 MCRSF
    0038| 54 20 50 52 54 20 36 30 | T PRT 60
    0040| 30 52 50 4D 20 44 55 50 | 0RPM DUP
    0048| 20 35 22 2D 34 38 2F 34 |  5"-48/4
    0050| 30 20 32 53 44 44 53 00 | 0 2SDDS.
    0058| 00 00 00 36 31 31 38 34 | ...61184
    0060| 2D 31 41 77 00 04 00 77 | -1Aw...w
    0068| 00 8E 01 00 00 00 00 00 | ........
    0070| 00 00 00 00 00 00 00 00 | ........
    0078| 00 00 00 00 00 00 00 00 | ........
